universal.css
html {
    box-sizing: border-box;
  }
  *,
  *::before,
  *::after {
    box-sizing: inherit;
  }

nav ol {
    display: flex;
    flex: 1;
    text-align: center;
    padding: 10px;
    font-size: 20px;
    background-color: black(246, 169, 255);
    color: white;
    gap: 25px;
    align-items: center;
    margin-bottom: 10px;
    border-bottom: 2px solid hsla(53, 100%, 50%, 1);
}

#name {
    margin-right: 15px;
    font-size: 25px;
}

#linkedin {
    background-color:rgb(0, 119, 181);
    color: white;
}

#github {
    background-color: white;
    color: black;
}

#email {
    background-color: orangered;
    color: white
}

body {
    background-color: black;
    color: white;
}

a:hover {
    text-decoration: underline;
}

a {
    text-decoration: none;
    color: white;
}

.section-title {
    font-size: 20px;
    color: hsla(53, 100%, 50%, 1);
    font-weight: bold;
    display: flex;
}

box {
    border: 1px solid hsla(53, 100%, 50%, 1);
    padding: 1px;
    margin-right: 0px;
    font-size: 20px;
}

